--- a/p02-wasm/index.html
+++ b/p02-wasm/index.html
@@ -12,7 +12,7 @@
       // will "boot" the module and make it ready to use. Currently browsers
       // don't support natively imported WebAssembly as an ES module, but
       // eventually the manual initialization won't be required!
-      import { add, default as init } from './pkg/LxL_20190405_WASM.js';
+      import { add, default as init } from './pkg/linuxlab_20190405_wasm.js';
 
       async function run() {
         // First up we need to actually load the wasm file, so we use the
@@ -25,7 +25,7 @@
         // Also note that the promise, when resolved, yields the wasm module's
         // exports which is the same as importing the `*_bg` module in other
         // modes
-        await init('./pkg/LxL_20190405_WASM_bg.wasm');
+        await init('./pkg/linuxlab_20190405_wasm_bg.wasm');
 
         // And afterwards we can use all the functionality defined in wasm.
         const result = add(1, 2);
